Fixed navbar collapse on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 	flex-direction: column;
 	/* background-color: cadetblue; */
 	height: 100vh;
+	position: relative;
 }
 
 .main-container {
@@ -34,26 +35,3 @@
 	justify-content: center;
 height: 100%;
 } */
-.side-bar {
-	background-color: #232323;
-}
-@media (max-width: 992px) {
-	.side-bar {
-		display: none;
-	}
-
-	.side-bar.collapsed {
-		display: block;
-		position: absolute;
-		z-index: 100;
-		height: 100vh;
-		width: 250px;
-		top: 0;
-		left: 0;
-		box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
-	}
-
-	.content-container {
-		margin-left: 0;
-	}
-}
